--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -4,13 +4,15 @@
     <a role="button" [routerLink]="['', { outlets: {primary: ['graph', selectedNetwork.id]} }]"
        data-toggle="tooltip" data-placement="bottom"
        title="{{'MAIN_MAPPINGS_GRAPH' | translate}}">
-      {{selectedNetwork.networkInformation.name}}
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
     </a>
+    {{selectedNetwork.networkInformation.name}}
   </h1>
 
   <hr>
 
-  <h3 *ngIf="selectedMapping.classifier || selectedMapping.chartValid || selectedMapping.gradientValid">{{'MAIN_MAPPINGS_DETAILS' | translate}}</h3>
+  <h3
+    *ngIf="selectedMapping.classifier || selectedMapping.chartValid || selectedMapping.gradientValid">{{'MAIN_MAPPINGS_DETAILS' | translate}}</h3>
 
   <table *ngIf="selectedMapping.chartValid" class="table table-bordered">
     <thead>
@@ -23,7 +25,8 @@
     <tr *ngFor="let entry of selectedMapping.chart.lineChartData[0].data; let i = index">
       <td *ngIf="i === 0">&lt;</td>
       <td *ngIf="i === selectedMapping.chart.lineChartLabels.length - 1">&gt;</td>
-      <td *ngIf="i > 0 && i < selectedMapping.chart.lineChartLabels.length - 1">{{selectedMapping.chart.lineChartLabels[i]}}</td>
+      <td
+        *ngIf="i > 0 && i < selectedMapping.chart.lineChartLabels.length - 1">{{selectedMapping.chart.lineChartLabels[i]}}</td>
       <td>{{entry}}</td>
     </tr>
     </tbody>
@@ -54,39 +57,43 @@
   <div class="table-responsive">
     <table *ngIf="selectedMapping.classifier" class="table table-bordered">
       <thead>
-        <th colspan="1">{{selectedMapping.classifier}}</th>
-        <th *ngFor="let value of selectedMapping.values">{{value}}</th>
+      <th colspan="3">{{selectedMapping.classifier}}</th>
+      <th *ngFor="let value of selectedMapping.values">{{value}}</th>
       </thead>
       <tbody>
-        <tr *ngFor="let style of selectedMapping.styleMap">
+      <tr *ngFor="let style of selectedMapping.styleMap">
 
-          <td><b>{{style.cssKey}}</b></td>
+        <td><b>{{style.cssKey}}</b></td>
+        <td>
+          <button class="btn btn-block btn-outline-warning" data-toggle="tooltip" data-placement="bottom" title="{{'MAIN_MAPPINGS_TT_EDIT' | translate}}">
+            <fa-icon [icon]="faEdit"></fa-icon>
+          </button>
+        </td>
+        <td>
+          <button class="btn btn-block btn-outline-danger">
+            <fa-icon [icon]="faTrash"></fa-icon>
+          </button>
+        </td>
 
-          <td *ngFor="let value of selectedMapping.values; let i = index">
+        <td *ngFor="let value of selectedMapping.values; let i = index">
 
             <span *ngFor="let styleValue of style.cssValues; let j = index">
               <span *ngIf="selectedMapping.selectors[i] === style.selectors[j]">
                   {{styleValue}}
-                  <span *ngIf="styleValue.indexOf('#') > -1" class="badge badge-pill border"
-                        [ngStyle]="{'background-color': styleValue}">&nbsp;</span>
+                <span *ngIf="styleValue.indexOf('#') > -1" class="badge badge-pill border"
+                      [ngStyle]="{'background-color': styleValue}">&nbsp;</span>
                 </span>
               </span>
 
-          </td>
+        </td>
 
-        </tr>
+      </tr>
       </tbody>
     </table>
   </div>
 
-  <div class="row mt-3" *ngIf="selectedMapping.classifier || selectedMapping.chartValid || selectedMapping.gradientValid">
-    <div class="col-6">
-      <button class="btn btn-block btn-outline-warning">
-        <fa-icon [icon]="faEdit"></fa-icon>
-        {{'MAIN_MAPPINGS_EDIT' | translate}}
-      </button>
-    </div>
-    <div class="col-6">
+  <div class="mt-3" *ngIf="selectedMapping.classifier || selectedMapping.chartValid || selectedMapping.gradientValid">
+    <div>
       <button class="btn btn-block btn-outline-danger" (click)="removeDialogue(showList)">
         <fa-icon [icon]="faTrash"></fa-icon>
         {{'MAIN_MAPPINGS_DELETE' | translate}}
@@ -99,81 +106,139 @@
   <div *ngIf="showList">
 
     <h3>{{'MAIN_MAPPINGS_TITLE_LIST' | translate}}</h3>
+
     <div class="row">
-
       <div class="col-6">
-        <h5>{{'MAIN_MAPPINGS_TITLE_NODES_DISCRETE' | translate}}</h5>
 
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let nd of selectedNetwork.mappings.nodesDiscrete">
-            <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nd)]} }]">
-              {{nd.classifier}}
-            </a>
-          </li>
-          <li class="list-group-item list-group-item-success">
-            <a role="button">
-              <fa-icon [icon]="faPlus"></fa-icon>
-              {{'MAIN_MAPPINGS_NEW' | translate}}
-            </a>
-          </li>
-        </ul>
+        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">
+          <thead class="border-bottom">
+            <th colspan="3">{{'MAIN_MAPPINGS_TITLE_NODES_DISCRETE' | translate}}</th>
+          </thead>
+          <tbody>
+          <tr *ngFor="let akv of selectedNetwork.aspectKeyValuesNodes">
+            <td *ngIf="akv.values.length !== akv.appliedTo.length">
+              {{akv.name}}
+            </td>
+            <td *ngIf="akv.values.length !== akv.appliedTo.length" class="float-right">
+              <button class="btn btn-outline-success mr-2" [routerLink]="['', { outlets: {primary: ['new', selectedNetwork.id, 'nd']} }]"
+                      data-toggle="tooltip" data-placement="bottom"
+                      title="{{'MAIN_MAPPINGS_NEW_ND' | translate}}">
+                <fa-icon [icon]="faPlus"></fa-icon>
+              </button>
+              <span *ngFor="let ndMap of selectedNetwork.mappings.nodesDiscrete">
+                <button class="btn btn-outline-secondary" *ngIf="akv.values.length !== akv.appliedTo.length && ndMap.classifier === akv.name"
+                        [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(ndMap)]} }]"
+                        data-toggle="tooltip" data-placement="bottom"
+                        title="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}">
+                  <fa-icon [icon]="faSearch"></fa-icon>
+                </button>
+              </span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
 
-        <hr>
-
-        <h5>{{'MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS' | translate}}</h5>
-
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let nc of selectedNetwork.mappings.nodesContinuous">
-            <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nc' + selectedNetwork.mappings.nodesContinuous.indexOf(nc)]} }]">
-              {{nc.title[0]}} {{'MAIN_MAPPINGS_MAPPED_BY' | translate}} {{nc.title[1]}}
-            </a>
-          </li>
-          <li class="list-group-item list-group-item-success">
-            <a role="button">
-              <fa-icon [icon]="faPlus"></fa-icon>
-              {{'MAIN_MAPPINGS_NEW' | translate}}
-            </a>
-          </li>
-        </ul>
       </div>
 
       <div class="col-6">
-        <h5>{{'MAIN_MAPPINGS_TITLE_EDGES_DISCRETE' | translate}}</h5>
 
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let ed of selectedNetwork.mappings.edgesDiscrete">
-            <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(ed)]} }]">
-              {{ed.classifier}}
-            </a>
-          </li>
-          <li class="list-group-item list-group-item-success">
-            <a role="button">
-              <fa-icon [icon]="faPlus"></fa-icon>
-              {{'MAIN_MAPPINGS_NEW' | translate}}
-            </a>
-          </li>
-        </ul>
-
-        <hr>
-
-        <h5>{{'MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS' | translate}}</h5>
-
-        <ul class="list-group">
-          <li class="list-group-item" *ngFor="let ec of selectedNetwork.mappings.edgesContinuous">
-            <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ec' + selectedNetwork.mappings.edgesContinuous.indexOf(ec)]} }]">
-              {{ec.title[0]}} {{'MAIN_MAPPINGS_MAPPED_BY' | translate}} {{ec.title[1]}}
-            </a>
-          </li>
-          <li class="list-group-item list-group-item-success">
-            <a role="button">
-              <fa-icon [icon]="faPlus"></fa-icon>
-              {{'MAIN_MAPPINGS_NEW' | translate}}
-            </a>
-          </li>
-        </ul>
+        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">
+          <thead class="border-bottom">
+            <th colspan="3">{{'MAIN_MAPPINGS_TITLE_EDGES_DISCRETE' | translate}}</th>
+          </thead>
+          <tbody>
+          <tr *ngFor="let akv of selectedNetwork.aspectKeyValuesEdges">
+            <td *ngIf="akv.values.length !== akv.appliedTo.length">
+              {{akv.name}}
+            </td>
+            <td *ngIf="akv.values.length !== akv.appliedTo.length" class="float-right">
+              <button class="btn btn-outline-success mr-2" [routerLink]="['', { outlets: {primary: ['new', selectedNetwork.id, 'ed']} }]"
+                      data-toggle="tooltip" data-placement="bottom"
+                      title="{{'MAIN_MAPPINGS_NEW_ED' | translate}}">
+                <fa-icon [icon]="faPlus"></fa-icon>
+              </button>
+              <span *ngFor="let edMap of selectedNetwork.mappings.edgesDiscrete">
+                <button class="btn btn-outline-secondary" *ngIf="akv.values.length !== akv.appliedTo.length && edMap.classifier === akv.name"
+                        [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edMap)]} }]"
+                        data-toggle="tooltip" data-placement="bottom"
+                        title="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}">
+                  <fa-icon [icon]="faSearch" ></fa-icon>
+                </button>
+              </span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
 
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-6">
+
+        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">
+          <thead class="border-bottom">
+          <th colspan="3">{{'MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS' | translate}}</th>
+          </thead>
+          <tbody>
+          <tr *ngFor="let akv of selectedNetwork.aspectKeyValuesNodes">
+            <td *ngIf="akv.datatype === 'double'">
+              {{akv.name}}
+            </td>
+            <td *ngIf="akv.datatype === 'double'" class="float-right">
+              <button class="btn btn-outline-success mr-2" [routerLink]="['', { outlets: {primary: ['new', selectedNetwork.id, 'nc']} }]"
+                      data-toggle="tooltip" data-placement="bottom"
+                      title="{{'MAIN_MAPPINGS_NEW_NC' | translate}}">
+                <fa-icon [icon]="faPlus"></fa-icon>
+              </button>
+              <span *ngFor="let ncMap of selectedNetwork.mappings.nodesContinuous">
+                <button class="btn btn-outline-secondary" *ngIf="akv.datatype === 'double' && ncMap.classifier === akv.name"
+                        [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nc' + selectedNetwork.mappings.nodesDiscrete.indexOf(ncMap)]} }]"
+                        data-toggle="tooltip" data-placement="bottom"
+                        title="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}">
+                  <fa-icon [icon]="faSearch"></fa-icon>
+                </button>
+              </span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
+
+      <div class="col-6">
+
+        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">
+          <thead class="border-bottom">
+          <th colspan="3">{{'MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS' | translate}}</th>
+          </thead>
+          <tbody>
+          <tr *ngFor="let akv of selectedNetwork.aspectKeyValuesEdges">
+            <td *ngIf="akv.datatype === 'double'">
+              {{akv.name}}
+            </td>
+            <td *ngIf="akv.datatype === 'double'" class="float-right">
+              <button class="btn btn-outline-success mr-2" [routerLink]="['', { outlets: {primary: ['new', selectedNetwork.id, 'ec']} }]"
+                      data-toggle="tooltip" data-placement="bottom"
+                      title="{{'MAIN_MAPPINGS_NEW_EC' | translate}}">
+                <fa-icon [icon]="faPlus"></fa-icon>
+              </button>
+              <span *ngFor="let ecMap of selectedNetwork.mappings.edgesContinuous">
+                <button class="btn btn-outline-secondary" *ngIf="akv.datatype === 'double' && ecMap.classifier === akv.name"
+                        [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ec' + selectedNetwork.mappings.nodesDiscrete.indexOf(ecMap)]} }]"
+                        data-toggle="tooltip" data-placement="bottom"
+                        title="{{'MAIN_MAPPINGS_TT_MAP_DETAILS' | translate}}">
+                  <fa-icon [icon]="faSearch"></fa-icon>
+                </button>
+              </span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+
+      </div>
+    </div>
+
   </div>
 
   <div *ngIf="!showList">
@@ -189,7 +254,8 @@
         </button>
       </div>
       <div class="col-6">
-        <button class="btn btn-block btn-outline-danger" (click)="removeAffirmation(selectedNetwork.id, currentMappingId)">
+        <button class="btn btn-block btn-outline-danger"
+                (click)="removeAffirmation(selectedNetwork.id, currentMappingId)">
           <fa-icon [icon]="faCheck"></fa-icon>
           {{'MAIN_MAPPINGS_CONFIRM_DELETION_YES' | translate}}
         </button>
