--- a/src/app/components/main-stats/main-stats.component.html
+++ b/src/app/components/main-stats/main-stats.component.html
@@ -19,7 +19,7 @@
         <fa-icon [icon]="faExchangeAlt"></fa-icon>&nbsp;{{'MAIN_STATS_BTN_COMPARE' | translate}}
       </a>
     </div>
-    <div class="col-9 card">
+    <div class="col-9 card" *ngIf="selectedNetwork.networkInformation.rightsholder || selectedNetwork.networkInformation.networkType || selectedNetwork.networkInformation.organism || selectedNetwork.networkInformation.description">
       <div class="card-body">
         <p *ngIf="selectedNetwork.networkInformation.rightsholder">
           <b [innerHTML]="">{{'MAIN_STATS_GRAPH_INFO_NW_RIGHTSHOLDER' | translate}}:</b>&nbsp;
@@ -39,6 +39,23 @@
   </div>
 
   <hr>
+
+  <h3 *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">{{'MAIN_STATS_GRAPH_ATTRIBUTES_NODES_TITLE' | translate}}</h3>
+  <ul *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">
+    <li *ngFor="let aspect of selectedNetwork.aspectKeyValuesNodes">
+      {{aspect.name}}
+    </li>
+  </ul>
+
+  <h3 *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">{{'MAIN_STATS_GRAPH_ATTRIBUTES_EDGES_TITLE' | translate}}</h3>
+  <ul *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">
+    <li *ngFor="let aspect of selectedNetwork.aspectKeyValuesEdges">
+      {{aspect.name}}
+    </li>
+  </ul>
+
+  <hr *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0 || selectedNetwork.aspectKeyValuesEdges.length > 0">
+
 </ng-container>
 
 <app-main-info></app-main-info>
